kubernetes/apps/cloudflared/cloudflared/manifests/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
{
  apiVersion: "cilium.io/v2",
  kind: "CiliumNetworkPolicy",
  metadata: {
    name: "cloudflared",
  },
  spec: {
    endpointSelector: {
      matchLabels: {
        app.kubernetes.io/name: "cloudflared",
      },
    },
    ingress: [{
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "prometheus",
          io.kubernetes.pod.namespace: "observability",
        },
      }],
      toPorts: [{
        ports: [{
          port: "8080",
          protocol: "TCP",
        }],
      }],
    }, {
      fromCIDRSet: [{
        cidr: "172.17.0.10/32",
      }],
    }],
    egress: [{
      toEndpoints: [{
        matchLabels: {
          io.kubernetes.pod.namespace: "kube-system",
          k8s-app: "kube-dns",
        },
      }],
      toPorts: [{
        ports: [{
          port: "53",
          protocol: "UDP",
        }, {
          port: "53",
          protocol: "TCP",
        }],
        rules: {
          dns: [{
            matchPattern: "*.v2.argotunnel.com",
          }, {
            matchName: "api.cloudflare.com",
          }],
        },
      }],
    }, {
      toEndpoints: [{
        matchLabels: {
          io.kubernetes.pod.namespace: "envoy-gateway-system",
          gateway.envoyproxy.io/owning-gateway-name: "external",
        },
      }],
      toPorts: [{
        ports: [{
          port: "10443",
          protocol: "TCP",
        }],
      }],
    }, {
      toFQDNs: [{
        matchPattern: "*.v2.argotunnel.com",
      }],
      toPorts: [{
        ports: [{
          port: "7844",
          protocol: "UDP",
        }, {
          port: "7844",
          protocol: "TCP",
        }],
      }],
    }, {
      toFQDNs: [{
        matchName: "api.cloudflare.com",
      }],
      toPorts: [{
        ports: [{
          port: "443",
          protocol: "TCP",
        }],
      }],
    }, {
      toCIDRSet: [{
        cidr: "103.21.244.0/22",
      }, {
        cidr: "103.22.200.0/22",
      }, {
        cidr: "103.31.4.0/22",
      }, {
        cidr: "104.16.0.0/13",
      }, {
        cidr: "104.24.0.0/14",
      }, {
        cidr: "108.162.192.0/18",
      }, {
        cidr: "131.0.72.0/22",
      }, {
        cidr: "141.101.64.0/18",
      }, {
        cidr: "162.158.0.0/15",
      }, {
        cidr: "172.64.0.0/13",
      }, {
        cidr: "173.245.48.0/20",
      }, {
        cidr: "188.114.96.0/20",
      }, {
        cidr: "190.93.240.0/20",
      }, {
        cidr: "197.234.240.0/22",
      }, {
        cidr: "198.41.128.0/17",
      }],
      icmps: [{
        fields: [{
          type: 8,
          family: "IPv4",
        }, {
          type: 3,
          family: "IPv4",
        }],
      }],
    }],
  },
}
